welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return b
           ^max1020:3: warning: enclosing method max has result type Unit: return value discarded
    return b
    ^max1020:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return a
         ^max1020:5: warning: enclosing method max has result type Unit: return value discarded
  return a
  ^max1020:10: error: type mismatch;
 found   : Unit
 required: Int
    return max(a,b)
              ^